--- a/NASA Psyche Game/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/NASA Psyche Game/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -7,6 +7,11 @@
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "firstTime",
                 "value": "{\"m_Value\":false}"
+            },
+            {
+                "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "buildOutputDirList",
+                "value": "{\"m_Value\":\"C:/Users/kylek/Desktop/Homework/2022-2023/Winter 23/INF 191a/2022_18m_web-based_game/NASA Psyche Game/Builds;;;;;;;;;\"}"
             }
         ]
     }
